--- a/.gitignore
+++ b/.gitignore
@@ -34,9 +34,11 @@ Thumbs.db
 *.rc
 /.qmake.cache
 /.qmake.stash
+build/
 
 # qtcreator generated files
 *.pro.user*
+*.txt.user
 
 # xemacs temporary files
 *.flc
