--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(cppquarium)
+project(cppquarium.html)
 cmake_minimum_required(VERSION 3.1)
 
 # set compiler / linker conf
@@ -6,6 +6,6 @@ set (CMAKE_CXX_STANDARD 14)
 
 file(GLOB_RECURSE SRC_LIST src/*.*pp)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -fvisibility=hidden -fvisibility-inlines-hidden")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -fvisibility=hidden -fvisibility-inlines-hidden -std=c++1z")
 
 add_executable(${PROJECT_NAME} ${SRC_LIST})
